Fix sun appearing above footer with z-index

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ section img {
     height: 40rem;
     margin-left: 100rem;
     mix-blend-mode: screen ;
+    z-index: 1;
 }
 
 .air_baloon {
@@ -224,6 +225,8 @@ footer {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    position: relative;
+    z-index: 10;
 }
 
 .company__name {
